--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aneesh Bukya - Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <!-- Include Google Fonts for modern typography -->
+    <!-- Favicon image -->
+    <link rel="icon" type="image/png" href="assets/ab.png" /> <!-- For .png file -->
+    <!-- or -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -204,86 +205,158 @@
         </div>
       </div>
     </section>
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-      <div class="container">
-        <h2 class="section-title">Browse My Recent Projects</h2>
-        <div class="project-details">
-          <div class="project-item">
-            <div class="project-image">
-              <img
-                src="./assets/breast-cancer-predictor.png"
-                alt="Breast Cancer Diagnosis Predictor"
-              />
-            </div>
-            <h3 class="project-title">Breast Cancer Diagnosis Predictor</h3>
-            <p class="project-description">
-              Developed an interactive Streamlit web app using Python and
-              Scikit-learn for breast cancer prediction, achieving over 98%
-              accuracy through data preprocessing and feature visualization with
-              Pandas and NumPy.
-            </p>
-            <div class="project-buttons">
-              <a
-                href="https://github.com/"
-                class="btn btn-outline"
-                target="_blank"
-                >GitHub</a
-              >
-              <a href="https://github.com/" class="btn btn-primary" target="_blank">Live Demo</a>
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-image">
-              <img
-                src="./assets/personal-ai-trainer.png"
-                alt="Personal AI Trainer"
-              />
-            </div>
-            <h3 class="project-title">RepIt - Personal AI Trainer</h3>
-            <p class="project-description">
-              Utilized OpenCV and machine learning to create a personal AI
-              trainer capable of detecting exercise repetitions and providing
-              real-time form feedback, improving user performance by 40% within
-              a month.
-            </p>
-            <div class="project-buttons">
-              <a
-                href="https://github.com/aneeshbukya/RepIt"
-                class="btn btn-outline"
-                target="_blank"
-                >GitHub</a
-              >
-              <a href="https://devpost.com/software/repit-your-personal-ai-trainer" class="btn btn-primary" target="_blank">DevPost</a>
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-image">
-              <img
-                src="./assets/twitter-sentiment-analysis.png"
-                alt="Twitter Sentiment Analysis"
-              />
-            </div>
-            <h3 class="project-title">Twitter Sentiment Analysis</h3>
-            <p class="project-description">
-              Conducted sentiment analysis on Twitter data using Python's
-              TextBlob, identifying market trends with 80% accuracy and creating
-              a report that assisted in predicting stock performance for a
-              major client.
-            </p>
-            <div class="project-buttons">
-              <a
-                href="https://github.com/"
-                class="btn btn-outline"
-                target="_blank"
-                >GitHub</a
-              >
-              <a href="https://github.com/" class="btn btn-primary" target="_blank">Live Demo</a>
-            </div>
-          </div>
+<!-- Projects Section -->
+<section id="projects" class="projects">
+  <div class="container">
+    <h2 class="section-title">Browse My Recent Projects</h2>
+    <div class="project-details">
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="./assets/breastcancer.png"
+            alt="Breast Cancer Diagnosis Predictor"
+          />
+        </div>
+        <h3 class="project-title">Breast Cancer Diagnosis Predictor</h3>
+        <p class="project-description">
+          Developed an interactive Streamlit web app using Python and
+          Scikit-learn for breast cancer prediction, achieving over 98%
+          accuracy through data preprocessing and feature visualization with
+          Pandas and NumPy.
+        </p>
+        <div class="project-buttons">
+          <a
+            href="https://github.com/"
+            class="btn btn-outline"
+            target="_blank"
+            >GitHub</a
+          >
+          <a href="https://github.com/" class="btn btn-primary" target="_blank">Live Demo</a>
         </div>
       </div>
-    </section>
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="./assets/repit.png"
+            alt="Personal AI Trainer"
+          />
+        </div>
+        <h3 class="project-title">RepIt - Personal AI Trainer</h3>
+        <p class="project-description">
+          Utilized OpenCV and machine learning to create a personal AI
+          trainer capable of detecting exercise repetitions and providing
+          real-time form feedback, improving user performance by 40% within
+          a month.
+        </p>
+        <div class="project-buttons">
+          <a
+            href="https://github.com/aneeshbukya/RepIt"
+            class="btn btn-outline"
+            target="_blank"
+            >GitHub</a
+          >
+          <a href="https://devpost.com/software/repit-your-personal-ai-trainer" class="btn btn-primary" target="_blank">DevPost</a>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="./assets/twitterinvest.png"
+            alt="Twitter Sentiment Analysis"
+          />
+        </div>
+        <h3 class="project-title">Twitter Sentiment Analysis</h3>
+        <p class="project-description">
+          Conducted sentiment analysis on Twitter data using Python's
+          TextBlob, identifying market trends with 80% accuracy and creating
+          a report that assisted in predicting stock performance for a
+          major client.
+        </p>
+        <div class="project-buttons">
+          <a
+            href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy"
+            class="btn btn-outline"
+            target="_blank"
+            >GitHub</a
+          >
+          <a href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy" class="btn btn-primary" target="_blank">Live Demo</a>
+        </div>
+      </div>
+      <!-- New Projects -->
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="./assets/multilingual.png"
+            alt="Multilingual Language Classifier"
+          />
+        </div>
+        <h3 class="project-title">Multilingual Language Classifier</h3>
+        <p class="project-description">
+          Implemented a language classification system using machine learning
+          algorithms like Decision Tree Learning (DTL) and AdaBoost. This system
+          effectively identifies whether given sentence fragments are in English
+          or Dutch based on various linguistic features.
+        </p>
+        <div class="project-buttons">
+          <a
+            href="https://github.com/aneeshbukya/Multilingual-Language-Classifier"
+            class="btn btn-outline"
+            target="_blank"
+            >GitHub</a
+          >
+          <a href="https://github.com/aneeshbukya/Multilingual-Language-Classifier" class="btn btn-primary" target="_blank">Live Demo</a>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="./assets/bitcoin.png"
+            alt="Building Blockchain in Go"
+          />
+        </div>
+        <h3 class="project-title">Building Blockchain in Go</h3>
+        <p class="project-description">
+          Developed a blockchain implementation using Go, focusing on creating
+          a decentralized ledger, handling transactions, and ensuring data integrity
+          with cryptographic techniques.
+        </p>
+        <div class="project-buttons">
+          <a
+            href="https://github.com/aneeshbukya/Building-Blockchain-in-Go"
+            class="btn btn-outline"
+            target="_blank"
+            >GitHub</a
+          >
+          <a href="https://github.com/aneeshbukya/Building-Blockchain-in-Go" class="btn btn-primary" target="_blank">Live Demo</a>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="./assets/pantry.png"
+            alt="Pantry Tracker"
+          />
+        </div>
+        <h3 class="project-title">Pantry Tracker</h3>
+        <p class="project-description">
+          Built a pantry management application using Next.js, Material UI, and
+          Firebase. The app allows users to track their pantry inventory, manage
+          food items, and set reminders for expiry dates.
+        </p>
+        <div class="project-buttons">
+          <a
+            href="https://github.com/aneeshbukya/Pantry-Tracker"
+            class="btn btn-outline"
+            target="_blank"
+            >GitHub</a
+          >
+          <a href="https://github.com/aneeshbukya/Pantry-Tracker" class="btn btn-primary" target="_blank">Live Demo</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
