--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <div class="project-item">
         <div class="project-image">
           <img
-            src="./assets/multilingual.png"
+            src="./assets/glag.png"
             alt="Multilingual Language Classifier"
           />
         </div>
