Added my latest projects

--- a/index.html
+++ b/index.html
@@ -205,158 +205,126 @@
         </div>
       </div>
     </section>
+
+    
+<!-- Projects Section -->
 <!-- Projects Section -->
 <section id="projects" class="projects">
   <div class="container">
     <h2 class="section-title">Browse My Recent Projects</h2>
     <div class="project-details">
+      <!-- New Projects -->
       <div class="project-item">
         <div class="project-image">
-          <img
-            src="./assets/breastcancer.png"
-            alt="Breast Cancer Diagnosis Predictor"
-          />
+          <img src="./assets/rag.png" alt="ProfRanker AI" />
+        </div>
+        <h3 class="project-title">
+          ProfRanker AI <span class="badge">Work in Progress</span>
+        </h3>
+        <p class="project-description">
+          Developed an AI platform using NLP and machine learning to analyze professor reviews. The system provides insights into teaching performance and student satisfaction, aiding course selection.
+        </p>
+        <div class="project-buttons">
+          <a href="https://github.com/aneeshbukya/ProfRanker-AI" class="btn btn-outline" target="_blank">GitHub</a>
+          <a href="https://github.com/aneeshbukya/ProfRanker-AI" class="btn btn-primary" target="_blank">Live Demo</a>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-image">
+          <img src="./assets/lag.png" alt="Large Action Models" />
+        </div>
+        <h3 class="project-title">
+          Large Action Models <span class="badge">Work in Progress</span>
+        </h3>
+        <p class="project-description">
+          Created a framework for training large-scale action models with deep learning. Focused on optimizing performance for complex tasks like action recognition and real-time decision-making.
+        </p>
+        <div class="project-buttons">
+          <a href="https://github.com/aneeshbukya/Large-Action-Models" class="btn btn-outline" target="_blank">GitHub</a>
+          <a href="https://github.com/aneeshbukya/Large-Action-Models" class="btn btn-primary" target="_blank">Live Demo</a>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-image">
+          <img src="./assets/breastcancer.png" alt="Breast Cancer Diagnosis Predictor" />
         </div>
         <h3 class="project-title">Breast Cancer Diagnosis Predictor</h3>
         <p class="project-description">
-          Developed an interactive Streamlit web app using Python and
-          Scikit-learn for breast cancer prediction, achieving over 98%
-          accuracy through data preprocessing and feature visualization with
-          Pandas and NumPy.
+          Developed a Streamlit web app for breast cancer prediction using Scikit-learn. Achieved over 98% accuracy with effective data preprocessing and feature visualization.
         </p>
         <div class="project-buttons">
-          <a
-            href="https://github.com/"
-            class="btn btn-outline"
-            target="_blank"
-            >GitHub</a
-          >
+          <a href="https://github.com/" class="btn btn-outline" target="_blank">GitHub</a>
           <a href="https://github.com/" class="btn btn-primary" target="_blank">Live Demo</a>
         </div>
       </div>
       <div class="project-item">
         <div class="project-image">
-          <img
-            src="./assets/repit.png"
-            alt="Personal AI Trainer"
-          />
+          <img src="./assets/repit.png" alt="Personal AI Trainer" />
         </div>
         <h3 class="project-title">RepIt - Personal AI Trainer</h3>
         <p class="project-description">
-          Utilized OpenCV and machine learning to create a personal AI
-          trainer capable of detecting exercise repetitions and providing
-          real-time form feedback, improving user performance by 40% within
-          a month.
+          Utilized OpenCV and machine learning to create an AI trainer for exercise repetition detection and form feedback. Improved user performance by 40% within a month.
         </p>
         <div class="project-buttons">
-          <a
-            href="https://github.com/aneeshbukya/RepIt"
-            class="btn btn-outline"
-            target="_blank"
-            >GitHub</a
-          >
+          <a href="https://github.com/aneeshbukya/RepIt" class="btn btn-outline" target="_blank">GitHub</a>
           <a href="https://devpost.com/software/repit-your-personal-ai-trainer" class="btn btn-primary" target="_blank">DevPost</a>
         </div>
       </div>
       <div class="project-item">
         <div class="project-image">
-          <img
-            src="./assets/twitterinvest.png"
-            alt="Twitter Sentiment Analysis"
-          />
+          <img src="./assets/twitterinvest.png" alt="Twitter Sentiment Analysis" />
         </div>
         <h3 class="project-title">Twitter Sentiment Analysis</h3>
         <p class="project-description">
-          Conducted sentiment analysis on Twitter data using Python's
-          TextBlob, identifying market trends with 80% accuracy and creating
-          a report that assisted in predicting stock performance for a
-          major client.
+          Conducted sentiment analysis on Twitter data with TextBlob. Identified market trends with 80% accuracy, aiding in stock performance predictions for a major client.
         </p>
         <div class="project-buttons">
-          <a
-            href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy"
-            class="btn btn-outline"
-            target="_blank"
-            >GitHub</a
-          >
+          <a href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy" class="btn btn-outline" target="_blank">GitHub</a>
           <a href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy" class="btn btn-primary" target="_blank">Live Demo</a>
         </div>
       </div>
-      <!-- New Projects -->
       <div class="project-item">
         <div class="project-image">
-          <img
-            src="./assets/glag.png"
-            alt="Multilingual Language Classifier"
-          />
+          <img src="./assets/glag.png" alt="Multilingual Language Classifier" />
         </div>
         <h3 class="project-title">Multilingual Language Classifier</h3>
         <p class="project-description">
-          Implemented a language classification system using machine learning
-          algorithms like Decision Tree Learning (DTL) and AdaBoost. This system
-          effectively identifies whether given sentence fragments are in English
-          or Dutch based on various linguistic features.
+          Implemented a language classification system using Decision Tree Learning and AdaBoost. Identifies whether sentence fragments are in English or Dutch with high accuracy.
         </p>
         <div class="project-buttons">
-          <a
-            href="https://github.com/aneeshbukya/Multilingual-Language-Classifier"
-            class="btn btn-outline"
-            target="_blank"
-            >GitHub</a
-          >
+          <a href="https://github.com/aneeshbukya/Multilingual-Language-Classifier" class="btn btn-outline" target="_blank">GitHub</a>
           <a href="https://github.com/aneeshbukya/Multilingual-Language-Classifier" class="btn btn-primary" target="_blank">Live Demo</a>
         </div>
       </div>
       <div class="project-item">
         <div class="project-image">
-          <img
-            src="./assets/bitcoin.png"
-            alt="Building Blockchain in Go"
-          />
+          <img src="./assets/bitcoin.png" alt="Building Blockchain in Go" />
         </div>
         <h3 class="project-title">Building Blockchain in Go</h3>
         <p class="project-description">
-          Developed a blockchain implementation using Go, focusing on creating
-          a decentralized ledger, handling transactions, and ensuring data integrity
-          with cryptographic techniques.
+          Developed a blockchain implementation in Go, focusing on creating a decentralized ledger and handling transactions. Emphasized cryptographic techniques for data integrity.
         </p>
         <div class="project-buttons">
-          <a
-            href="https://github.com/aneeshbukya/Building-Blockchain-in-Go"
-            class="btn btn-outline"
-            target="_blank"
-            >GitHub</a
-          >
+          <a href="https://github.com/aneeshbukya/Building-Blockchain-in-Go" class="btn btn-outline" target="_blank">GitHub</a>
           <a href="https://github.com/aneeshbukya/Building-Blockchain-in-Go" class="btn btn-primary" target="_blank">Live Demo</a>
         </div>
       </div>
       <div class="project-item">
         <div class="project-image">
-          <img
-            src="./assets/pantry.png"
-            alt="Pantry Tracker"
-          />
+          <img src="./assets/pantry.png" alt="Pantry Tracker" />
         </div>
         <h3 class="project-title">Pantry Tracker</h3>
         <p class="project-description">
-          Built a pantry management application using Next.js, Material UI, and
-          Firebase. The app allows users to track their pantry inventory, manage
-          food items, and set reminders for expiry dates.
+          Built a pantry management app with Next.js and Firebase. Users can track inventory, manage food items, and set expiry reminders to reduce waste.
         </p>
         <div class="project-buttons">
-          <a
-            href="https://github.com/aneeshbukya/Pantry-Tracker"
-            class="btn btn-outline"
-            target="_blank"
-            >GitHub</a
-          >
+          <a href="https://github.com/aneeshbukya/Pantry-Tracker" class="btn btn-outline" target="_blank">GitHub</a>
           <a href="https://github.com/aneeshbukya/Pantry-Tracker" class="btn btn-primary" target="_blank">Live Demo</a>
         </div>
       </div>
     </div>
   </div>
 </section>
-
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
