--- a/index.html
+++ b/index.html
@@ -246,6 +246,19 @@
       </div>
       <div class="project-item">
         <div class="project-image">
+          <img src="./assets/hr.png" alt="EmpowerHR: AI-Powered HR Agents" />
+        </div>
+        <h3 class="project-title">EmpowerHR: AI-Powered HR Agents</h3>
+        <p class="project-description">
+          Developed a Django-based web app to automate HR tasks like summarizing candidate notes, answering FAQs, and onboarding. The AI-driven platform streamlines HR operations for efficiency and better employee experience.
+        </p>
+        <div class="project-buttons">
+          <a href="https://github.com/aneeshbukya/EmpowerHR--AI-Powered-HR-Agents" class="btn btn-outline" target="_blank">GitHub</a>
+          <a href="https://github.com/aneeshbukya/EmpowerHR--AI-Powered-HR-Agents" class="btn btn-primary" target="_blank">Live Demo</a>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-image">
           <img src="./assets/breastcancer.png" alt="Breast Cancer Diagnosis Predictor" />
         </div>
         <h3 class="project-title">Breast Cancer Diagnosis Predictor</h3>
@@ -276,7 +289,7 @@
         </div>
         <h3 class="project-title">Twitter Sentiment Analysis</h3>
         <p class="project-description">
-          Conducted sentiment analysis on Twitter data with TextBlob. Identified market trends with 80% accuracy, aiding in stock performance predictions for a major client.
+          Analyzed Twitter sentiment data to assess its impact on stock trends. The project involves data cleaning, calculating engagement ratios for stocks, and visualizing results over time.
         </p>
         <div class="project-buttons">
           <a href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy" class="btn btn-outline" target="_blank">GitHub</a>
