Updated my expericne

--- a/index.html
+++ b/index.html
@@ -172,19 +172,13 @@
             <p class="location">Dallas, Texas</p>
             <ul class="description">
               <li>
-                Developed and implemented an AI-driven summarization feature for
-                candidate notes, reducing manual processing time by 70% and
-                handling over 20 candidate evaluations weekly.
+                Collaborated with a team of 5 in an agile environment to develop over 10 AWS Lambda functions, automating IT tasks and enhancing internal support for BART employees by integrating 6 AWS Bedrock action groups using Python.
               </li>
               <li>
-                Designed an FAQ agent leveraging AI, which successfully answered
-                85% of HR-related queries, cutting down response time from 24
-                hours to instant.
+                Led the development of the help desk agent, leveraging AWS S3 to store and manage BART's extensive knowledge base, resulting in a 30% reduction in response time for internal inquiries.
               </li>
               <li>
-                Created an onboarding form module that personalized and sent
-                emails to new employees, increasing onboarding efficiency by 60%
-                and processed 30+ onboarding requests within the first month.
+                Implemented a React frontend for an internal IT support portal, seamlessly integrating AWS services such as Lambda, S3, and Bedrock to improve user experience and achieve a 25% increase in task automation efficiency.
               </li>
             </ul>
           </div>
