Added Pantry tarcker loom video

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </p>
         <div class="project-buttons">
           <a href="https://github.com/aneeshbukya/Pantry-Tracker" class="btn btn-outline" target="_blank">GitHub</a>
-          <a href="https://github.com/aneeshbukya/Pantry-Tracker" class="btn btn-primary" target="_blank">Live Demo</a>
+          <a href="https://www.loom.com/share/c4d31d2fa6a44f52baa34d25f0c61ac6?sid=f56ccde7-bcde-481f-b628-730c21e742de" class="btn btn-primary" target="_blank">Live Demo</a>
         </div>
       </div>
     </div>
