--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         </p>
         <div class="project-buttons">
           <a href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy" class="btn btn-outline" target="_blank">GitHub</a>
-          <a href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy" class="btn btn-primary" target="_blank">Live Demo</a>
+          <a href="https://github.com/aneeshbukya/Twitter-Sentiment-Investing-Strategy/blob/main/performance.png" class="btn btn-primary" target="_blank">Live Demo</a>
         </div>
       </div>
       <div class="project-item">
