--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="hero-content">
           <div class="hero-image">
             <img
-              src="./assets/profile2.heic"
+              src="./assets/profile2.png"
               alt="Aneesh Bukya profile picture"
             />
           </div>
