--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p class="subtitle">Full Stack Developer</p>
             <div class="hero-buttons">
               <a
-                href="./assets/AB_resume.pdf"
+                href="./assets/Aneesh_Bukya_resume.pdf"
                 class="btn btn-primary"
                 download
                 >Download CV</a
