--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
           <div class="experience-item">
             <h3 class="company">Brightcone.ai</h3>
-            <h4 class="role">Machine Learning Engineer Intern</h4>
+            <h4 class="role">Software Engineering Intern</h4>
             <p class="duration">May 2024 – Present</p>
             <p class="location">Dallas, Texas</p>
             <ul class="description">
