--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <div class="project-image">
           <img src="./assets/bitcoin.png" alt="Building Blockchain in Go" />
         </div>
-        <h3 class="project-title">Building Blockchain in Go</h3>
+        <h3 class="project-title">Building Blockchain in Go <span class="badge">Work in Progress</span></h3>
         <p class="project-description">
           Developed a blockchain implementation in Go, focusing on creating a decentralized ledger and handling transactions. Emphasized cryptographic techniques for data integrity.
         </p>
