Removed download resume option

--- a/index.html
+++ b/index.html
@@ -108,11 +108,7 @@
         </p>
         
         <div class="hero-cta">
-          <a class="btn btn-primary" href="assets/Aneesh_Bukya_resume.pdf" target="_blank" rel="noreferrer">
-            <span class="btn-icon">📄</span>
-            <span>Download Resume</span>
-          </a>
-          <a class="btn btn-secondary" href="#projects">
+          <a class="btn btn-primary" href="#projects">
             <span class="btn-icon">💼</span>
             <span>View Projects</span>
           </a>
@@ -757,7 +753,6 @@
           <div class="footer-section">
             <h4>Resources</h4>
             <ul>
-              <li><a href="assets/Aneesh_Bukya_resume.pdf" target="_blank" rel="noreferrer">Resume</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
